--- a/2010/thesis/conclusion.tex
+++ b/2010/thesis/conclusion.tex
@@ -1,6 +1,12 @@
 \SpecialChapter{Conclusion}
+\def\CaptionPrefix{C.}
+\eqn=0\tabn=0\fign=0
 
-\> ref to Jenkovszky \bref{jenkovszky11}
+\> summary of summaries (per chapter)
+
+\> plots: unification of the theoretical and experimental effort
 
 \fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{bla}
 \fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{bla}
+
+\> ref to Jenkovszky \bref{jenkovszky11}
