--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -45,6 +45,8 @@ In what follows, we will often drop the $s$ dependence of cross-sections and amp
 
 \TODO{$\rm\bar pp$ scattering, crossing symmetry}, models on nucleon nucleon scattering, nucleon = proton or antiproton.
 
+\bref{donnachie02}
+
 \iffalse
 cross-section def (norm)
 si = |F|^2
