--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -1,4 +1,6 @@
 \SpecialChapter{Introduction}
+\def\CaptionPrefix{I.}
+\eqn=0\tabn=0\fign=0
 
 \> something about forward processes (notably elastic scattering), how interesting they are, related to the structure of the proton
 
@@ -17,3 +19,7 @@ software parameter  & \pmt{parameter}		& typewriter\cr\ln
 }}}
 
 \> standar abbreviations Eq., Tab., Fig. (+Figs, ...), Sec. + Ch.
+
+\> this thesis refers to the state of TOTEM for a given date: end of 2010, no newer results
+
+\def\CaptionPrefix{\currentChapterNumber.}
