--- a/2010/thesis/simu_reco.tex
+++ b/2010/thesis/simu_reco.tex
@@ -294,7 +294,7 @@ We will test these error estimates with MC simulations in the following two sect
 \def\TOCLabel{High-$\be^*$ optics}
 \subsection[elr 1535]{High-$\BiggerFonts\mathbf\be^*$ optics}
 
-In this section we will show the performance of the elastic reconstruction module for the case of the nominal $\be^* = 1535\un{m}$ optics (see \Sc{rp measurement}). For that reason we have made a MC simulation of elastic events with Elegent generator (see \Sc{elegent}) and run the entire reconstruction chain (see \Fg{sr sw structure}) up to the elastic reconstruction module. The elastic reconstruction has been made with no cuts -- with formally infinite road-size and tolerance parameters. In this way, one may determine the optimal values of the cut parameters.
+In this section we will show the performance of the elastic reconstruction module for the case of the nominal $\be^* = 1535\un{m}$ optics (see \Sc{rp measurement}) at the center-of-mass energy $\sqrt s = 14\un{TeV}$. For that reason we have made a MC simulation of elastic events with Elegent generator (see \Sc{elegent}) and run the entire reconstruction chain (see \Fg{sr sw structure}) up to the elastic reconstruction module. The elastic reconstruction has been made with no cuts -- with formally infinite road-size and tolerance parameters. In this way, one may determine the optimal values of the cut parameters.
 
 \Fg{elr 1535 ndf} shows that the most frequent numbers of degrees of freedom of the fit \Eq{elr fit} are 2 and 4. The former corresponds to the situation with 2 vertical pots hit on both sides. The latter is created when a track hits also 2 horizontal pots on a side.
 
@@ -323,7 +323,7 @@ As a consequence of low magnification values $v$ (of the order of $10^{-2}$), th
 \def\TOCLabel{Medium-$\be^*$ optics}
 \subsection[elr 90]{Medium-$\BiggerFonts\mathbf\be^*$ optics}
 
-In this section, we will show the elastic-reconstruction performance for the nominal $\be^* = 90\un{m}$ optics (see \Sc{rp measurement}). Like in the previous section, we have used no cuts, in order to find optimal values of the cut parameters.
+In this section, we will show the elastic-reconstruction performance for the nominal $\be^* = 90\un{m}$ optics (see \Sc{rp measurement}) at $\sqrt s = 14\un{TeV}$. Like in the previous section, we have used no cuts, in order to find optimal values of the cut parameters.
 
 For this optics, the hits are concentrated around $x=0\un{mm}$ (the effective length $L_x$ is very small, see \Fg{ttm hit distribution}). This means that the horizontal RPs can not contribute to the measurement of elastic scattering. Therefore we expect most frequent hit-configuration to be 2 vertical pots on both sides, that is 2 degrees of freedom for fit \Eq{elr fit}, which is confirmed by \Fg{elr 90 ndf}.
 
