--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -137,7 +137,7 @@ Later on, we will call \em{$V$ sensors} all sensors which have their (nominal --
 \fig[14cm]{fig/pdf/rp_station_3d.pdf}{rp station 3d}{The geometry of RP stations (only the first two planes/sensors of the 56-220-near unit are drawn). The proportions have been modified for graphical reasons, they are not in scale. The blue line marks the beam axis. The red arrows mark the offsets of sensors' centers from the package axes (slightly inclined dotted lines). The $v$ vectors give the read-out directions. The green lines show the distances between sensors' cut edges and the beam axis.
 }
 
-Since the RPs are movable, each RP module includes a Linear Voltage Differential Transformator (LVDT), a device which can determine the approach of the RP to the beam. These devices are calibrated to give the distance between the top/bottom face of the thin window (see \Fg{rp pot}) and the beam axis. If the gap between the thin window and the sensor's edges is known, one can calculate the distances from the beam to the sensor's cut edges (green lines in \Fg{rp station 3d}). These are the quantities relevant for the track reconstruction.
+Since the RPs are movable, each RP module includes a linear voltage differential transformer (LVDT), a device which can determine the approach of the RP to the beam. These devices are calibrated to give the distance between the top/bottom face of the thin window (see \Fg{rp pot}) and the beam axis. If the gap between the thin window and the sensor's edges is known, one can calculate the distances from the beam to the sensor's cut edges (green lines in \Fg{rp station 3d}). These are the quantities relevant for the track reconstruction.
 
 %\> RP approach -- typical $10\si$, define beam sigma!
 
@@ -181,42 +181,45 @@ From \Eq{ttm hill sol} one can read off the amplitude of the oscillations, which
 \eqref{\si(s) = \sqrt{\be(s)\ep}\ .}{ttm beam sigma}
 This quantity is often called a \em{beam sigma}. The beam size is of a special interest at the interaction point -- it characterizes the vertex distribution. Denoting $\be^*$ the value of the $\be(s)$ function at the interaction point, one can write
 \eqref{\si_{x^*} = \sqrt{\be^* \ep}\ .}{ttm vertex sm}
-By differentiating \Eq{ttm hill sol} one can obtain the evolution proton angles $\th_x = \d x/\d s$. Again, one can extract the amplitude of its oscillations, that is a measure of the beam angular divergence. Evaluating it at the IP yields
+By differentiating \Eq{ttm hill sol} one can obtain the $s$-evolution of proton angles $\th_x = \d x/\d s$. Again, one can extract the amplitude of its oscillations, that is a measure of the beam angular divergence. Evaluating it at the IP yields
 \eqref{\si_{\th^*} = \sqrt{\ep\over\be^*}\ .}{ttm beam div}
 
-The solution \Eq{ttm hill sol} was derived for protons of the nominal momentum $p_{\rm nom}$. If the actual proton momentum differs by $\De p = \xi p_{\rm nom}$, one has to add a term $D(s) \xi$ to the solution, see Sec.~5.2 in~\bref{wilson}. Then, for the proton transport from the IP to a position $s$ one can write (see Sec.~5.2.4 in~\bref{wilson})
+The solution \Eq{ttm hill sol} was derived for protons of the nominal momentum $p_{\rm nom}$. If the actual proton momentum differs by ($\xi$ denotes a relative \em{momentum loss})
+\eqref{\De p = \xi\, p_{\rm nom}\ ,}{ttm xi def}
+one has to add a term $D(s) \xi$ to the solution, see Sec.~5.2 in~\bref{wilson}. Then, for the proton transport from the IP to a position $s$ one can write (see Sec.~5.2.4 in~\bref{wilson})
 \eqref{x(s) =\ L_x(s, \ldots)\, \th_x^* + v_x(s,\ldots)\, x^* + D_x(s,\ldots)\,\xi}{ttm lin par}
-and equivalently for the vertical direction. In the previous relation we have introduced the \em{effective length} $L$, the \em{magnification} $v$ and the \em{dispersion} $D$, we will refer to them as \em{optical functions}. These functions depend on the distance $s$ from the IP, but may also depend on the variables $\th_x^*$, $x^*$ and $\xi$. For the optics of practical interest, however, the dependence on $\xi$ is the only relevant one.
+and equivalently for the vertical direction. In the previous relation we have introduced the \em{effective length} $L$, the \em{magnification} $v$ and the \em{dispersion} $D$. We will refer to them as \em{optical functions}. These functions depend on the distance $s$ from the IP, but may also depend on the variables $\th_x^*$, $x^*$ and $\xi$. For the optics of practical interest, however, $\xi$ is the only relevant dependence.
 
-Strictly speaking, the form of \Eq{ttm lin par} is oversimplified. Due to higher order corrections, $x$ and $y$ projections are not strictly independent and consequently one should include also dependence on $\th_y^*$ and $y^*$. For the nominal optics these terms are negligible. However in reality, due to magnet misalignments (mostly their rotations), the binding between $x$ and $y$ projections may become important, see e.g.~\Fg{al el plots yx}.
+Strictly speaking, the form of \Eq{ttm lin par} is oversimplified. Due to higher order corrections, $x$ and $y$ projections are not strictly independent and consequently one should include also dependence on $\th_y^*$ and $y^*$. For the nominal optics these terms are negligible. However in reality, due to magnet misalignments (mostly their rotations), the coupling between $x$ and $y$ projections may become important, see e.g.~\Fg{al el plots yx}.
 
-In practice the optical functions are calculated with dedicated computer programs such as MAD-X \bref{mad-x}. Since they might be to slow for large Monte Carlo simulations, TOTEM's software (see \Sc{sr}) includes a module that calculates a polynomial parameterization of a MAD-X output, for details see Sec.~6.4 in \bref{hubert}.
+In practice the optical functions are calculated with dedicated computer programs such as MAD-X \bref{mad-x}. Since they might be too slow for large Monte Carlo simulations, TOTEM's software (see \Sc{sr}) includes a module that calculates a polynomial parameterization of a MAD-X output, for details see Sec.~6.4 in \bref{hubert}.
 
-For standard LHC runs one may expect relative error of beam momentum measurement
+For standard LHC runs one may expect a beam-momentum offset
 \eqref{\bar\xi = \O{10^{-3}}}{ttm energy off}
 and the proton-to-proton momentum fluctuation
 \eqref{\si_\xi = \O{10^{-4}}\ .}{ttm energy fl}
 
-Since the optics \Eq{ttm lin par} relates the kinematics of a proton at the IP and the RP stations, it defines what protons can be detected with the (finite-size) RP detectors. Formally, one could think of an \em{acceptance} function $A(\th_x^*, x^*, \th_y^*, y^*, \xi)$ which gives $1$ if such a proton can be detected and $0$ otherwise. One can also take an average over the quantities that are not of interest. This may lead to, for example to acceptance $A(t, \xi)$, which gives the ratio protons with momentum transfer $t$ and momentum loss $\xi$ that can be detected. Similarly one may define the \em{elastic acceptance} $A(t)$ as the detected ratio of the elastic events with momentum transfer $t$. Several examples of the elastic acceptance are shown in \Fg{ttm elastic acceptance}.
+Since the optics \Eq{ttm lin par} relates the kinematics of a proton at the IP and the RP stations, it defines what protons can be detected with the (finite-size) RP detectors. Formally, one could think of an \em{acceptance} function $A(\th_x^*, x^*, \th_y^*, y^*, \xi)$ which gives $1$ if such a proton can be detected and $0$ otherwise. One can also take an average over the quantities that are not of interest. This may lead, for example, to the acceptance $A(t, \xi)$, which gives the fraction of protons with momentum transfer $t$ and momentum loss $\xi$ that can be detected. Similarly one may define the \em{elastic acceptance} $A(t)$ as the detected ratio of the elastic events with momentum transfer $t$. Several examples of elastic acceptances for different optics are shown in \Fg{ttm elastic acceptance}.
 
 %In an elastic measurement analysis (see e.g.~\Sc{felm}) one needs to correct for the limited acceptance. It is clear that when the acceptance is too low, the \em{acceptance correction} is large and 
 
-\fig{fig/pdf/ttm_elastic_acceptance.pdf}{ttm elastic acceptance}{The elastic acceptances for the three optics types. Calculated for $\sqrt{s} = 14\un{TeV}$ and with RP sensors at $10\si + 0.5\un{mm}$. The horizontal line marks the points $|t_{30}|$ where the acceptances reach $30\percent$.}
+\fig{fig/pdf/ttm_elastic_acceptance.pdf}{ttm elastic acceptance}{The elastic acceptances for three optics types. Calculated for $\sqrt{s} = 14\un{TeV}$ and with RP sensors at $10\si + 0.5\un{mm}$. The horizontal line marks the points $|t_{30}|$ where the acceptances reach $30\percent$.}
 
-The rich physics programme of TOTEM requires several running scenarios, including several optics. We will now review the foreseen scenarios, classified by the beta-function at the interaction point $\be^*$. Certain parameters have been calculated assuming the CMS energy of $\sqrt s = 14\un{TeV}$.
+The rich physics programme of TOTEM requires several running scenarios, including several optics. We will now review the scenarios as they were originally forseen for the center-of-mass energy $\sqrt s = 14\un{TeV}$. Afterwords, we will describe the run conditions used for the first elastic scattering measurement at $\sqrt s = 7\un{TeV}$ (discussed in \Sc{felm}). We will classify the scenarios by the beta-function values at the interaction point $\be^*$.
 
-\> The \em{high $\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts with a reduced normalized emittance of $\ep_N=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the IP $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e. the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the RPs to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \approx 10^{29} \hbox{ -- } 10^{30}\un{cm^{-2}s^{-1}}$.
+\> The \em{high $\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts on a reduced normalized emittance of $\ep_N=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the IP $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e. the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the RPs to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \approx 10^{28} \un{cm^{-2}s^{-1}}$.
 
-\> The \em{medium $\be^*$} scenario is based on a very universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and certain diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ is planned to be used, leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.59\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts much later -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts with a luminosity of ${\cal L} \approx 10^{30}\un{cm^{-2}s^{-1}}$.
+\> The \em{medium $\be^*$} scenario is based on a very universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and all diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. Moreover, $L_x$ practically vanishes in the far units, which simplifies the distinction between elastic and inelastic protons (the horizontal elongation can only come from proton's momentum loss). The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ was planned to be used (nowadays the LHC reaches emittance values as low as $2\un{\mu m\ rad}$), leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.59\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts much later -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts on a luminosity of ${\cal L} \approx 10^{28} \hbox{ -- } 10^{29}\un{cm^{-2}s^{-1}}$.
 
-\> The \em{low $\be^*$} runs will be used for large-$\xi$ diffractive studies and large-$|t|$ elastic scattering measurements (the data analyzed in \Sc{felm} were obtained with this type of optics). These scenarios with $\be^*$ between $0.5$ and $3\un{m}$ are optimized for high luminosities ${\cal L} \approx 10^{32} \hbox{ -- } 10^{33}\un{cm^{-2}s^{-1}}$ and not for forward proton detection -- the effective length at the $220\un{m}$ stations do not exceed $L_x = 2\un{m}$ and $20\un{m}$. With the standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ the beam divergence is rather large: $\si_{\th^*} \approx 16\un{\mu rad}$. The beam sizes at the $220\un{m}$ are about $\si_x = 0.1\un{mm}$ and $\si_y = 0.3\un{mm}$. The elastic acceptance (green histogram in \Fg{ttm elastic acceptance}) reaches $30\percent$ at $|t_{30}| = 2.5\un{GeV^2}$.
+\> The \em{low $\be^*$} scenarios ($\be^*$ between $0.5$ and $3.5\un{m}$) were designed for diffractive studies and large-$|t|$ elastic scattering measurements. They are optimized for high luminosities ${\cal L} \approx 10^{32} \hbox{ -- } 10^{33}\un{cm^{-2}s^{-1}}$ and not for forward proton detection -- the effective lengths at the $220\un{m}$ stations do not exceed $L_x = 2\un{m}$ and $L_y = 20\un{m}$. With the standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ the beam divergence is rather large: $\si_{\th^*} \approx 16\un{\mu rad}$. The beam sizes at the $220\un{m}$ are about $\si_x = 0.1\un{mm}$ and $\si_y = 0.3\un{mm}$. The elastic acceptance (green histogram in \Fg{ttm elastic acceptance}) reaches $30\percent$ at $|t_{30}| = 2.5\un{GeV^2}$.
 
 \vskip\itskip
 
-\Fg{ttm hit distribution} illustrates the properties of the three types of optics. The horizontal (vertical) spread of hits is controlled by the horizontal effective length $L_x$ (the vertical $L_y$). That is why the $\be^* = 90$ and $2\un{m}$ optics yield very narrow elastic scattering hit distributions. The gray ellipses show $10\si$ contours, thereby controlling the positions of the RPs.
+\Fg{ttm hit distribution} illustrates the properties of the three types of optics. The horizontal (vertical) spread of hits is determined by the horizontal effective length $L_x$ (the vertical $L_y$). That is why the $\be^* = 90$ and $2\un{m}$ optics yield very narrow elastic scattering hit distributions. The gray ellipses show $10\si$ contours, thereby controlling the positions of the RPs.
 
+\fig{fig/pdf/ttm_hit_distribution.pdf}{ttm hit distribution}{Simulated distributions of elastic-scattering protons in the 56-220-far unit, each color corresponds to an optics type. The gray ellipses show $10$ beam sigma contours. The RP sensors are placed at $10\si + 0.5\un{mm}$.}
 
-\fig{fig/pdf/ttm_hit_distribution.pdf}{ttm hit distribution}{Simulated distributions of elastic-scattering protons in the 56-220-far unit, each color corresponds to an optics type. The gray ellipses show $10$ beam sigma contours. The RP sensors are place at $10\si + 0.5\un{mm}$.}
+Now let us describe the run conditions used for the first elastic scattering measurement (the data analysis presented in \Sc{felm}). The center-of-mass energy was $\sqrt s = 7\un{TeV}$ and the standard 2010 LHC optics with $\be^* = 3.5\un{m}$ was used. This optics falls into the group of low-$\be^*$ optics (as described above). The vertical effective lengths in the $220\un{m}$ stations (the only stations used for the measurement) lied in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal effective lengths were too small for proton reconstruction and thus the horizontal scattering angle $\th_x^*$ was calculated from the horizontal angles $\th_x = (x_{\rm F} - x_{\rm N})/(z_{\rm F} - z_{\rm N})$ measured in each station. These angles are related by the factor $\d L_{x}/\d z$ which had values of about $0.31$ for this optics. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the RPs were approached as close as $7\si$ from the beam. This allowed us to measure the elastic differential cross-section down to $|t| = 0.36\un{GeV^2}$.
 
 
 
