--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1069,7 +1069,7 @@
       title        = "Data-analysis techniques for high-energy physics
                       experiments",
 	  edition	   = "2nd"
-      publisher    = "Cambridge Univ. Press",
+      publisher    = "Cambridge University Press",
       address      = "Cambridge",
       year         = "1990"
 		ISBN	   = "0-521-63548-9"
@@ -1148,4 +1148,14 @@
       pages          = "201801",
       doi            = "10.1103/PhysRevLett.89.201801",
       year           = "2002",
+}
+
+@Book{donnachie02,
+      author         = "DONNACHIE, S., DOSCH, G., LANDSHOFF, P. and NACHTMANN, O.",
+      title          = "Pomeron physics and QCD",
+      year           = "2002",
+      publisher    = "Cambridge University Press",
+      address      = "Cambridge",
+	  edition		= "1st"
+		ISBN		= "0-521-78039-X"
 }
